# kumiki

./: .cursorrules  .gitignore  .kigumi.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPERS.md  Makefile  README.md  TODO.txt  example_authoring_notes.md  learn_to_timber_frame_shed.py  pyproject.toml
.github/: FUNDING.yml  copilot-instructions.md
.github/instructions/: authoring.instructions.md  horsey-viewer-frontend.instructions.md  kigumi-viewer-frontend.instructions.md  usage.instructions.md
.github/prompts/: plan-jointAnnotationsPerfectTimbersOnly.prompt.md
.github/workflows/: astro.yml  deploy-website.yml  publish-kigumi.yml  publish.yml  pytest.yml  release.yml  test-minimal.yml  typecheck.yml
docs/: agent_usage_instructions.md  concepts.md  patternbook.md
docs/plans/: assembly-ordering.md  assembly-solver-v2.md
freecad/: README.md  giraffe_render_freecad.py  run_examples.py  test_csg.py
fusion360/: README.md  giraffe_render_fusion360.py  giraffe_render_fusion360_OLD.py  giraffetest.manifest  giraffetest.py  test_local.py
garbage/: gateway_example.py  ladder_example.py  new_shed.py  new_shed_benchmark.py  oscareshower_old.py  sillyshed_example.py
kigumi/: .vscodeignore  CURSOR-INSTALL.md  INSTALL.md  README.md  check-extension.md  dependency-discovery.py  discovery-adapter.js  extension.js  file-watcher.js  frame-scanner.js  frame-view-session.js  install  install.sh  jest.config.js  log-retention.js  package-lock.json  package.json  pattern-source-utils.js  project-initializer.js  project-root.js  python-env.js  refresh-profiler.js  runner-session.js  runner.py  sidebar-provider.js  tag-search-plan.txt  test-frame.py  uninstall.sh  viewer.js  webview-request.js
kigumi/__tests__/: assembly-timeline.test.js  camera-controller.test.js  feature-flags.test.js  file-watcher.test.js  log-retention.test.js  project-initializer.test.js  runner-protocol.test.js  selection-store.test.js  sidebar-provider.test.js
kigumi/scripts/: prepare-bundled-instructions.js  update-vendor.js
kigumi/test/: run-extension-tests.js
kigumi/test-fixtures/: accessory_frame.py  assembly_frame.py  milestone_joint_frame.py  minimal_frame.py  patternbook_frame.py
kigumi/webview/: assembly-timeline.js  camera-controller.js  feature-flags.js  layers-panel.js  (+4 more)
kumiki/: __init__.py  _pattern_index.json  assembly.py  blueprint.py  construction.py  cutcsg.py  example_shavings.py  footprint.py  kigumi_at_home.py  librarian.py  librarian_analysis.py  librarian_cli.py  librarian_index.py  measuring.py  patternbook.py  rendering_utils.py  rule.py  ticket.py  timber.py  timber_shavings.py  triangles.py
kumiki-viewer/: CURSOR-INSTALL.md  INSTALL.md  README.md  check-extension.md  extension.js  file-watcher.js  frame-view-session.js  install.sh  jest.config.js  package-lock.json  package.json  refresh-profiler.js  runner-session.js  runner.py  tag-search-plan.txt  test-frame.py  viewer.js
patterns/: CSG_debug_examples.py  CSG_debug_patterns.py  basic_joints_examples.py  basic_joints_patterns.py  board_joints_patterns.py  butt_joints_patterns.py  compound_joints_patterns.py  construction_patterns.py  corner_joints_patterns.py  cross_joints_patterns.py  decorative_joints_patterns.py  double_butt_joints_example.py  free_joints_patterns.py  irrational_angles_example.py  irrational_angles_patterns.py  japanese_joints_example.py  mortise_and_tenon_joint_examples.py  multi_butt_joints_patterns.py  patternbook_example.py  patternbook_patterns.py  plain_joints_example.py  splice_joints_patterns.py  tongue_and_groove_joint_example.py
tests/: __init__.py  conftest.py  test_assembly.py  test_blueprint.py  test_construction.py  test_footprint.py  test_kigumi_at_home.py  test_librarian.py  test_librarian_analysis.py  test_librarian_index.py  test_measuring.py  test_meowmeowcsg.py  test_patternbook.py  test_rendering_utils.py  test_rule.py  test_ticket.py  test_timber.py  test_timber_shavings.py  test_triangles.py  testing_shavings.py
tools/: build_pattern_index.py  profile_tinyhouse120.py  test_profiling.py  test_step_output.py
trash/: gateway_example.py  ladder_example.py  new_shed.py  sillyshed_example.py
website/: README.md  astro.config.mjs  package.json
(+100 files in other folders)
