[project]
name = "kumiki"
version = "0.1.0"
description = "A library for programmatic timber frame CAD design"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "minimaple" }]
readme = "README.md"
keywords = ["timber", "woodworking", "cad", "parametric", "sympy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "sympy>=1.12.0",
    "numpy>=1.21.0",
    "trimesh>=4.7.0",
    "manifold3d>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/minimaple/kumiki"
Repository = "https://github.com/minimaple/kumiki"
Documentation = "https://github.com/minimaple/kumiki/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kumiki"]

[tool.hatch.build.targets.wheel.force-include]
"patterns" = "kumiki/patterns"

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "ty>=0.0.15",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.ty.src]
exclude = ["oldcrap", "fusion360/libs", "kigumi", "fusion360", "freecad", "patterns"]