[project]
name = "kumiki"
version = "0.4.0"
description = "A library for programmatic timber frame CAD design"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "minimaple" }]
readme = "README.md"
keywords = ["timber", "woodworking", "cad", "parametric", "sympy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "sympy>=1.12.0",
    "numpy>=1.21.0",
    "trimesh>=4.7.0",
    "lxml>=4.9.0",
    "manifold3d>=3.4.0",
    "networkx>=3.0",
    "typing_extensions>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/minimapletinytools/kumiki"
Repository = "https://github.com/minimapletinytools/kumiki"
Documentation = "https://github.com/minimapletinytools/kumiki/tree/main/docs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kumiki"]

[tool.hatch.build.targets.wheel.force-include]
"patterns" = "kumiki/patterns"
"docs" = "kumiki/docs"
"kumiki/_pattern_index.json" = "kumiki/_pattern_index.json"
# kumiki/_pattern_index.json is generated by `make pattern-index`
# (see tools/build_pattern_index.py) and must be regenerated before
# building a release wheel.

[tool.hatch.build.targets.sdist.force-include]
"patterns" = "patterns"
"docs" = "docs"
"kumiki/_pattern_index.json" = "kumiki/_pattern_index.json"

[tool.pytest.ini_options]
# Pytest configuration
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[dependency-groups]
dev = [
    "ty>=0.0.15",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.ty.src]
exclude = ["oldcrap", "fusion360/libs", "kigumi", "fusion360", "freecad", "patterns"]